--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jh-makers/InstaClone-Backend#readme",
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "apollo-server": "^2.25.2",
     "graphql": "^15.4.0"
   },
@@ -24,6 +25,7 @@
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "prisma": "^5.11.0"
   }
 }
